# benchmark

./: .gitignore  README  README.md  configure.ac
benchmarks/: README  README.md  configure.ac
benchmarks/common/: mlton-callec.sml  run-par.pml  run-seq.mlb  run-seq.pml  run-seq.sml  smlnj-callec.sml
benchmarks/config/: check_smlnj_heap_suffix.m4
benchmarks/lib/rope/: rope-permute.pml
benchmarks/manticore-db/: gc-time.sh
benchmarks/plot/: leaf_size_experiment.py  line_plot.py  rope_splitting_experiment.py  speedups.py
benchmarks/plot-R/: avgs.r  main.sml  plot.r  run-avg.sh  run-convert.sh  run-plot.sh  sources.cm
benchmarks/plot-gen/: efficiency-fn.sml  gen-work-stealing-stats.sh  work-stealing-stats-gen-fn.sml  work-stealing-stats-sig.sml
benchmarks/programs/: Makefile.in  bench.sh  seq-barneshut
benchmarks/programs/account-transfer/: account-transfer.pml  mc.mlb
benchmarks/programs/ack/: mc-seq.mlb
benchmarks/programs/ams-already-flat/: pml.mlb
benchmarks/programs/ams-flat-arith/: flat-arith.pml
benchmarks/programs/ams-flat-flops/: build-all  flat-flops.pml
benchmarks/programs/ams-mandelbrot/: mandelbrot.c  mandelbrot.pml  pml.mlb  swp.pml
benchmarks/programs/ams-mandelbulb/: build-all  mandelbulb.c  mandelbulb.pml
benchmarks/programs/ams-mmm/: mmm.pml  pml.mlb
benchmarks/programs/ams-nested-firsts/: nested-firsts.sml
benchmarks/programs/ams-nested-lens/: nested-firsts.pml  pml.mlb
benchmarks/programs/ams-nested-sums/: nested-sums.pml
benchmarks/programs/ams-raytracer/: ams-raytracer.pml  swp-raytracer.pml
benchmarks/programs/ams-seg-sum/: nested-seg-sum.pml  pml.mlb  seg-sum.pml  seg-sum.sml  simple-seg-sum.sml
benchmarks/programs/ams-smvm/: build-both  mc.mlb  smvm.pml
benchmarks/programs/barnes-hut/: Makefile.in  barnes-hut-mlton.mlb  barnes-hut-par.mlb  barnes-hut-par.pml  barnes-hut-parray.pml  barnes-hut-rope-mlton.mlb  barnes-hut-rope.sml  barnes-hut-seq.pml  barnes-hut-seq.sml  barnes-hut.pml  barnes-hut.sml  compat.sml  different_input_sizes_sh.in  gen-bodies-main.sml  gen-bodies-mlton.mlb  gen-bodies.cm  gen-bodies.sh  gen-bodies.sml  gen-input-data.mlb  gen_bodies_sh.in  mc-parray.mlb  mc-seq.mlb  mc.mlb  mlton.mlb  paper.tex  run_sh.in  smlnj.cm
benchmarks/programs/black-scholes/: black-scholes.pml  black-scholes.sml  mc.mlb  results.txt
benchmarks/programs/cml-merge/: channel-stats.pml  mc.mlb  merge2.pml
benchmarks/programs/cml-parallelpp/: mc.mlb  parallel-pp2.pml  parallel-pp3.pml  parallel-pp4.pml
benchmarks/programs/cml-pingpong/: mc.mlb  pingpong.sml  pingpong1.pml  smlnj.cm
benchmarks/programs/cml-prodcon/: Makefile  README  globals.pml  mc.mlb  prodcon-stats.pml  prodcon.pml  run.sh  trunk_patch_5912.diff  trunk_ticketLockPatch.diff  trunk_tscPatch.diff
benchmarks/programs/cml-ring/: compat.sml  main.pml  main.sml  mc.mlb  ring-cml.sml  ring.pml  ring.sml  smlnj.cm
benchmarks/programs/cml-spawn/: mc.mlb  params.pml  params.sml  smlnj.cm  spawn.sml  spawn1.pml
benchmarks/programs/cml-spawn-minus1/: mc.mlb
benchmarks/programs/cml-spawn-minus2/: params.pml  spawn1.pml
benchmarks/programs/cml-spawn-minus3/: params.pml
benchmarks/programs/cml-spawn-minus4/: params.pml
benchmarks/programs/cml-spawn-minus5/: params.pml
benchmarks/programs/cml-spawn-minus6/: params.pml
benchmarks/programs/common/: Makefile.in  gen_random_int_list_sh.in  run-seq.pml  run-seq.sml
benchmarks/programs/delaunay-mesh/: Queue.pml  RBMap.pml  RBSet.pml  STM.pml  benchmark  coordinate.pml  delaunay.pml  element.pml  globals.pml  main.pml  mc.mlb  mesh.pml  region.pml  test.pml
benchmarks/programs/dense-matrix-multiply/: dense-matrix-multiply-parray.pml  dense-matrix-multiply.pml  dense-matrix-multiply.sml  mc-parray.mlb  mlton.mlb  smlnj.cm
benchmarks/programs/dfa/: dfa.pml  dfa.sml
benchmarks/programs/ec-ack/: TODO  mlton.mlb  prog.pml  prog.sml
benchmarks/programs/ec-evenodd/: prog.pml  prog.sml
benchmarks/programs/ec-fib/: prog.pml  prog.sml  smlnj.cm
benchmarks/programs/ec-loop/: prog.pml
benchmarks/programs/ec-motzkin/: prog.pml  prog.sml
benchmarks/programs/ec-sudan/: compat.sml  mc-seq.mlb  mlton.mlb  prog.pml  prog.sml  smlnj.cm
benchmarks/programs/ec-tak/: mlton.mlb  prog.pml  prog.sml
benchmarks/programs/ffi-fib/: compat.sml  mlton.mlb  prog.pml
benchmarks/programs/ffi-fib2/: compat.sml  prog.pml
benchmarks/programs/ffi-trigfib/: prog.pml  smlnj.cm
benchmarks/programs/fib/: Makefile.in  different_input_sizes_sh.in  fib-mlton.mlb  fib.sml  pfib.pml  run_sh.in
benchmarks/programs/fib-array/: run_sh.in
benchmarks/programs/hpcc/: stream.mlb  stream.pml
benchmarks/programs/id-raytracer/: Makefile.in  ams-raytracer.pml  id-raytracer-parray.pml  id-raytracer.pml  id-raytracer.sml  mc-parray.mlb  mc.mlb  mlton.mlb  raytracer-dist.pml  raytracer-mlton.mlb  raytracer.cm  raytracer.sml  run_sh.in
benchmarks/programs/ivarPMap/: approxKColor.pml  benchmark  build  graphIO.pml  ivarPMap.pml  kColor.pml  mc.mlb  synthetic.mlb  synthetic.pml
benchmarks/programs/jacobian/: jacobian.pml  mc-parray.s  mksymmtx.py
benchmarks/programs/k-ary-tree/: KAryTree.pml  Main.pml  main.mlb
benchmarks/programs/kmeans/: cluster.sml  commonUtil.sml  kmeans.cm  kmeans.sml  normal.sml  point.sml  simple-test.sml  unittests.sml
benchmarks/programs/kmeans-stm/: STM.pml  benchmark  cluster.pml  commonUtil.pml  globals.pml  kmeans.pml  main.pml  mc.mlb  normal.pml  point.pml  run.pml
benchmarks/programs/knapsack/: Knapsack-155.hs  Knapsack-200.hs  (+13 more)
benchmarks/scripts/: README  are_files_in_db.sh  bench.py  bz2-to-db.sh  clean-all.sh  experiment-git_sh.in  experiment_mlton_sh.in  experiment_sh.in  experiment_smlnj_sh.in  gen_backend_experiment_sh.in  gen_input_data_sh.in  gen_makefile_sh.in  gen_sequential_cont_experiment_sh.in  gen_speedup_experiment_sh.in  gen_sst_experiment_sh.in  mk-json.sh  mkOneTable.py  print-max-leaf-size.pml  print_max_leaf_size_sh.in  processAll  processFile.py  processTimes.R  restore_max_leaf_size_sh.in  run-all.sh  runAll  set_max_leaf_size_sh.in  work_stealing_stats_sh.in
(+1054 files in other folders)
